24-jun-2009 - qeed - sound/ppu - reverted to old noise table value since
								 this seems to get correct sound for
							     double dragon 2. Also added experimental
							     $2004 reading support to play micro
							     machines with (little) shakes, and fixed
							     some timing in the new PPU.
24-jun-2009 - adelikat - win32 - memory watch - option to bind to main window, if checked it gives GENS dialog style control, where there is no extra task bar item, and it minimizes when FCEUX is minimized
24-jun-2009 - adelikat - win32 - palette commandline options
24-jun-2009 - adelikat - win32 - Sound Dialog - cleanup, when sound is off, all controls are grayed out
24-jun-2009 - adelikat - win32 - Hex Editor - Drag & Drop for .tbl files
24-jun-2009 - adelikat - win32 - Drag & Drop for .fcm, it converts and then loads the converted movie automatically
24-jun-2009 - adelikat - win32 - Drag & Drop support for palette files
23-jun-2009 - adelikat - win32 - Drag & Drop support for savestates
22-jun-2009 - qeed - Revert IRQ inhibit fix, since this seems to break Dragon
					 Warrior 4, added palette reading cases for the new PPU.
21-jun-2009 - adelikat - win32 - memwatch - save menu item is grayed if file hasn't changed
20-jun-2009 - adelikat - win32 - memwatch - fixed a regression I made in 2.0.1 that broke the Save As menu item
17-jun-2009 - qeed - Sound core fix, updated with the correct values for the noise and DMC table, 
                     and also fixed the IRQ inhibit behavior for register $4017. Also fixed the CPU 
                     unofficial opcode ATX, ORing with correct constant $FF instead of $EE, as tested 
                     by blargg's. These fixes passes the IRQ flags test from blargg, and also one more 
                     opcode test from blargg's cpu.nes test.
16-jun-2009 - adelikat - sound core fix - square 1 & square 2 volume controls no longer backwards